--- a/scripts/bom/ace/1-infra/kustomization.yaml
+++ b/scripts/bom/ace/1-infra/kustomization.yaml
@@ -16,10 +16,10 @@ resources:
 #- argocd/machinesets.yaml
 
 #bridgette has added all of the ones below:
-argocd/namespace-b2bi-prod.yaml
-argocd/serviceaccounts-b2bi-prod.yaml
-argocd/sfg-b2bi-clusterwide.yaml
-argocd/daemonset-sync-global-pullsecret.yaml
+- argocd/namespace-b2bi-prod.yaml
+- argocd/serviceaccounts-b2bi-prod.yaml
+- argocd/sfg-b2bi-clusterwide.yaml
+- argocd/daemonset-sync-global-pullsecret.yaml
 
 patches:
 - target:
