--- a/scripts/bom/ace/1-infra/kustomization.yaml
+++ b/scripts/bom/ace/1-infra/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
 #- argocd/consolelink.yaml
-- argocd/consolenotification.yaml
+#- argocd/consolenotification.yaml
 - argocd/namespace-ibm-common-services.yaml
 - argocd/namespace-ci.yaml
 - argocd/namespace-dev.yaml
@@ -14,12 +14,6 @@ resources:
 #- argocd/storage.yaml
 #- argocd/infraconfig.yaml
 #- argocd/machinesets.yaml
-
-#bridgette has added all of the ones below:
-- argocd/namespace-b2bi-prod.yaml
-- argocd/serviceaccounts-b2bi-prod.yaml
-- argocd/sfg-b2bi-clusterwide.yaml
-- argocd/daemonset-sync-global-pullsecret.yaml
 
 patches:
 - target:
